Added support of testEnableDynamicAgentLoading