@@ -83,6 +83,10 @@ test {
 			}
 		}
 	}
+	
+	if (testEnableDynamicAgentLoading) {
+		jvmArgs(['-XX:+EnableDynamicAgentLoading', '-Xshare:off'])		
+	}	
 }
 
 
